syntax = "proto3";

package notification;

option java_package = "com.eban.notification.grpc";
option java_multiple_files = true;

// Enum: loại thông báo
enum TypeNoti {
  LIKE = 0;
  COMMENT = 1;
  FOLLOW = 2;
}

// Request: gửi thông báo đến user
message SendNotificationRequest {
  string user_id = 1;
  string creater_id = 2;
  string feed_id = 3;
  TypeNoti type = 4;
}

// Response: thông báo gửi thành công hay không
message SendNotificationResponse {
  bool success = 1;
}

// Service: khai báo gRPC
service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}
